@@ -50,7 +50,6 @@ public:
     static URL createPublicURL(SecurityOrigin*);
     static URL createInternalURL();
     static String getOrigin(const URL&);
-    static String getIdentifier(const URL&);
 
 private:
     static URL createBlobURL(const String& originString);
