@@ -1,3 +1,13 @@
+2020-06-02  Tetsuharu Ohzeki  <tetsuharu.ohzeki@gmail.com>
+
+        Remove unused BlobURL::getIdentifier
+        https://bugs.webkit.org/show_bug.cgi?id=212635
+
+        Reviewed by Youenn Fablet.
+
+        * fileapi/BlobURL.cpp:
+        * fileapi/BlobURL.h:
+
 2020-06-02  Mark Lam  <mark.lam@apple.com>
 
         Fix broken Windows build.
